k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-stream-zset
  namespace: backend
  labels:
    app: redis-stream-zset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-stream-zset
  template:
    metadata:
      labels:
        app: redis-stream-zset
    spec:
      containers:
        - name: redis-stream-zset
          image: registry.local:8000/redis-stream-zset:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
