k8s/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redis-stream-zset
  annotations:
    "app.kubernetes.io/managed-by": "helm"
    "meta.helm.sh/release-name": "redis-stream-zset"

spec:
  parentRefs:
    - name: eg
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: redis-stream-zset
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /redis-stream-zset
      timeouts: # <-- Timeout configurations
        request: 120s # Max duration for a request
        backendRequest: 120s # Timeout for backend response
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
